# tic-tac-chec

./: .air.toml  .dockerignore  .env.example  .gitignore  CLAUDE.md  CODEX_DESIGN_PLAN.md  Caddyfile  Dockerfile  Dockerfile.caddy  Dockerfile.ssh  Dockerfile.web  LEARNING_BY_PRACTICE_PLAN.md  Makefile  README.md  WEB_API_DESIGN.md  docker-compose.override.yml.example  docker-compose.yml  fly.toml  go.mod  go.sum  otel-collector.yaml  ssh-play.cast
.github/workflows/: build.yml  deploy.yml  test.yml
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
bot/models/: bot.onnx  bot.onnx.data  bot_easy.onnx  bot_easy.onnx.data  bot_hard.onnx  bot_hard.onnx.data  bot_medium.onnx  bot_medium.onnx.data
bot/training/: bench_vec.py  env.py  env_vec.py  eval_mcts_strength.py  evaluate.py  evaluate_fast.py  export.py  mcts_collect.py  mcts_collect_fast.py  mcts_parallel.py  model.py  opponent_pool.py  ppo.py  ppo_fast.py  ppo_vec.py  pyproject.toml  replay_buffer.py  test_encoding.py  test_env.py  test_env_vec.py  train.py  train_alphazero.py  train_big.py  train_overnight.py
claude-skill/: SKILL.md
cmd/cli/: app.go  app_test.go  game_state.go  main.go  main_test.go  roundtrip_test.go  types.go
cmd/server/: lobby.go  main.go  server.go  server_test.go  testmain_test.go
cmd/ssh/: main.go
cmd/tui/: main.go
cmd/web/: app.go  assets.go  assets_test.go  bots.go  client.go  lobby.go  (+13 more)
engine/: board.go  game.go  game_test.go  helpers_test.go  moves.go  moves_test.go  pieces.go  types.go
(+177 files in other folders)
